kubernetes/infrastructure/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: default
spec:
  parentRefs:
    - name: homelab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
